correção bug botões overflow nav

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,12 +23,20 @@ h5,
 h6 {
 	font-family: var(--bold-font);
 }
+
+h2 {
+	font-size: clamp(28px, 2vw, 50px);
+}
+
 a {
 	text-decoration: none;
 }
+
 header {
 	position: fixed;
 	width: 100vw;
+	z-index: 3;
+
 	h1 {
 		display: flex;
 		justify-content: center;
@@ -66,7 +74,7 @@ header {
 	}
 }
 .menu {
-	border-bottom: 1px solid rgba(128, 128, 128, 0.172);
+	// border-bottom: 1px solid rgba(128, 128, 128, 0.172);
 	background: #000;
 	a {
 		font-size: 1rem;
@@ -114,6 +122,7 @@ header {
 .hero {
 	width: 100vw;
 	height: 100vh;
+	// background: #c7c7c7;
 	&::before {
 		content: "";
 		display: block;
@@ -127,10 +136,14 @@ header {
 		height: 80%;
 		margin: 1rem auto;
 		// background: yellow;
+		gap: 2rem;
 
 		.hero-text {
+
 			width: fit-content;
-			padding: 2rem;
+			padding: 1rem;
+			// background: tomato;
+
 
 			span{
 				transition: 1s ease;
@@ -146,7 +159,7 @@ header {
 				line-height: 2rem;
 				word-spacing: 0.2vw;
                 text-align: justify;
-				font-size: clamp(15px, 1.2vw, 25px);
+				font-size: clamp(16px, 1vw, 30px);
 				color: #222222;
 			}
 			h1 {
@@ -161,9 +174,10 @@ header {
             .flex-cv{
                 display: flex;
                 gap: 1rem;
-
+				z-index: 1;
+				
                 .hero-cv{
-                    display: flex;
+					display: flex;
                     justify-content: center;
                     align-items: center;
                     flex-wrap: nowrap;
@@ -176,6 +190,7 @@ header {
 					animation-iteration-count: infinite;
 					transform-origin: bottom;
 					margin-top: 1rem;
+					z-index: 2;
 
                     &:hover{
                         background: var(--main-color-darker);
@@ -209,9 +224,12 @@ header {
 }
 
 
-// .projetos{
-//     // background: red;
-// }
+.projetos{
+	width: 100vw;
+	height: 100vh;
+    background: #7d84b2;
+	padding: 2rem;
+}
 
 // .sobre{
 //     // background: #000;
@@ -231,6 +249,10 @@ header {
 		display: none;
 	}
 
+	.random-img{
+		display: none;
+	}
+
 }
 
 @media screen and (max-width: 768px) {
@@ -239,7 +261,7 @@ header {
 	}
 
 	.hero-text{
-		padding: 2rem;
+		margin: 0 auto;
 	}
 
 	.hero::before{
